--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <title>Сапёр</title>
+        <title>Портфолио</title>
     </head>
     <body>
         <div class="container">
