--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <title>Портфолио</title>
+        <link rel="sho﻿rtcut icon" href="logo_site.ico" type="image/x-icon">
     </head>
     <body>
         
