--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="style.css">
         <title>Портфолио</title>
         <link rel="icon" href="logo_site.ico" type="image/x-icon">
+        <style>
+            body{ background-color: #181818; } 
+        </style>
     </head>
     <body>
         
