--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <link rel="stylesheet" href="style.css">
         <title>Портфолио</title>
         <link rel="icon" href="logo_site.ico" type="image/x-icon">
+        <link href="css/style.css" rel="stylesheet">
         <style>
-            body{ background-color: #181818; } 
+            body{ background-color: #181818; }
+            
         </style>
     </head>
     <body>
