--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <title>Портфолио</title>
-        <link rel="icon" href="images/logo_site.ico" type="image/x-icon">
+        <link rel="icon" href="portfolio/images/logo_site.ico " type="image/x-icon">
         <link href="css/style.css" rel="stylesheet">
         <style>
             body{ background-color: #181818; }
