--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Портфолио</title>
         <link rel="icon" href="logo_site.ico " type="image/x-icon">
-        <link href="css/style.css" rel="stylesheet">
         <style>
             body{ background-color: #181818; }
             
