--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="icon" href="logo_site.ico " type="image/x-icon">
         <style>
             body{ background-color: #181818; }
+            body, a, a:link{cursor:url(images/cursor/cursor.cur), default;} a:hover {cursor:url(images/cursor/cursor2.cur),pointer;}
             
         </style>
     </head>
