--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <link rel="icon" href="logo_site.ico " type="image/x-icon">
         <style>
             body{ background-color: #181818; }
-            body, a, a:link{cursor:url(images/cursor/cursor.cur), default;} a:hover {cursor:url(images/cursor/cursor2.cur),pointer;}
             
         </style>
     </head>
     <body>
-        
+        <div>
+        </div>
     </body>
 </html>
