--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Портфолио</title>
         <link rel="icon" href="logo_site.ico " type="image/x-icon">
         <style>
-            body{ background-color: #181818; }
+/*             body{ background-color: #181818; } */
             
         </style>
     </head>
