--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <div>
+            <a href="images/daka-dibuja-8-atardecer.jpg">
         </div>
     </body>
 </html>
