--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
         <title>Портфолио</title>
         <link rel="icon" href="logo_site.ico " type="image/x-icon">
         <style>
-/*             body{ background-color: #181818; } */
-            
+            body {
+                background-image: url(images/image1.jpg);
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
         </style>
     </head>
     <body>
+        <div class="overhead">
+            <div class="overhead-desc">
+                Меня зовут <span class="orange">Григорий</span> и я родился <span class="orange">13 Декабря 2004 года</span> в городе Бородино. Я интересуюсь <span class="orange">UX/UI дизайном</span> и <span class="orange">программирование</span>. В настоящий момент я являюсь студентом 2 курса и начинаю изучать языки программирования, такие как <span class="orange">Lua, Python, C# и тд</span>. В свободное время я обожаю сидеть за компьютером и играть в разнообразные <span class="orange">видеоигры</span>.
+            </div>
+            <p><img src="images/user.png" alt="Error 1 (Invalid Image)" class="circle"></p>
+            <p class="overhead-name">FULKA</p>
+            <hr>
+        </div>
     </body>
 </html>
