--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Портфолио</title>
         <link rel="icon" href="logo_site.ico " type="image/x-icon">
         <style>
@@ -21,6 +21,26 @@
             <p><img src="images/user.png" alt="Error 1 (Invalid Image)" class="circle"></p>
             <p class="overhead-name">FULKA</p>
             <hr>
+            <div class="button-social">
+                <div>
+                    <a href="https://steamcommunity.com/id/Fulkaany/">
+                        <img src="images/steam.svg" alt="Error 1 (Invalid Image)" class="button-social-image">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://vk.com/fulka_id">
+                        <img src="images/vk.svg" alt="Error 1 (Invalid Image)" class="button-social-image">
+                    </a>
+                </div>
+                <div>
+                    <img src="images/discord.svg" alt="Error 1 (Invalid Image)" class="button-social-image" onclick="myFunction()">
+                </div>
+                <div>
+                    <a href="https://github.com/FuIka">
+                        <img src="images/github.svg" alt="Error 1 (Invalid Image)" class="button-social-image">
+                    </a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
