--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link href="style.css" rel="stylesheet" type="text/css">
         <title>Портфолио</title>
         <link rel="icon" href="logo_site.ico " type="image/x-icon">
         <style>
