--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <body>
         <div class="overhead">
             <div class="overhead-desc">
-                Меня зовут <span class="orange">Григорий</span> и я родился <span class="orange">13 Декабря 2004 года</span> в городе Бородино. Я интересуюсь <span class="orange">UX/UI дизайном</span> и <span class="orange">программирование</span>. В настоящий момент я являюсь студентом 2 курса и начинаю изучать языки программирования, такие как <span class="orange">Lua, Python, C# и тд</span>. В свободное время я обожаю сидеть за компьютером и играть в разнообразные <span class="orange">видеоигры</span>.
+                Меня зовут <span class="orange">Григорий</span> и я родился <span class="orange">13 Декабря 2004 года</span> в городе Бородино. Я интересуюсь <span class="orange">UX/UI дизайном</span> и <span class="orange">программирование</span>. В настоящий момент я являюсь студентом 2 курса и я уже начинаю изучать языки программирования, такие как <span class="orange">Lua, Python, C# и тд</span>. В свободное время я обожаю сидеть за компьютером и играть в разнообразные <span class="orange">видеоигры</span>. Также увлекаюсь <span class="orange">Левел Дизайнер</span> и хочу двигаться в этом направлении дальше...
             </div>
-            <p><img src="images/user.png" alt="Error 1 (Invalid Image)" class="circle"></p>
+            <p><img src="images/avatar.png" alt="Error 1 (Invalid Image)" class="circle"></p>
             <p class="overhead-name">FULKA</p>
             <hr>
             <div class="button-social">
@@ -41,6 +41,44 @@
                     </a>
                 </div>
             </div>
-        </div>
+            <div class="object">
+                <div class="object-core">
+                    <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image">
+                    <div class="object-core-cube">
+                        <img src="images/lua.svg" alt="Error 1 (Invalid Image)" class="object-core-logo">
+                    </div>
+                    <div class="object-core-rectangle">
+                        <a class="object-core-name">Lua</a>
+                    </div>
+                    <div class="object-core-text">
+                        Создавал собственные игровые дополнения для видеоигры <span class="orange">Garry's mod</span>. 
+                    </div>
+                </div>
+                <div class="object-core">
+                    <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image">
+                    <div class="object-core-cube">
+                        <img src="images/python.svg" alt="Error 1 (Invalid Image)" class="object-core-logo">
+                    </div>                    
+                    <div class="object-core-rectangle">
+                        <a class="object-core-name">Python</a>
+                    </div>
+                    <div class="object-core-text">
+                        Разработал собственного <span class="orange">Bot</span>, для своего сообщества в <span class="orange">Discord</span>.
+                    </div>
+                </div>
+                <div class="object-core">
+                    <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image">
+                    <div class="object-core-cube">
+                        <img src="images/hammer_editor.svg" alt="Error 1 (Invalid Image)" class="object-core-logo">
+                    </div>
+                    <div class="object-core-rectangle">
+                        <a class="object-core-name">Hammer Editor</a>
+                    </div>
+                    <div class="object-core-text">
+                        Создавал игровые локации для видеоигры <span class="orange">Garry's mod</span> по вселенной <span class="orange">SCP</span>.
+                    </div>
+                </div>
+            </div>
+        </div>  
     </body>
 </html>
