--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div class="overhead">
             <div class="overhead-desc">
-                Меня зовут <span class="orange">Григорий</span> и я родился <span class="orange">13 Декабря 2004 года</span> в городе Бородино. Я интересуюсь <span class="orange">UX/UI дизайном</span> и <span class="orange">программирование</span>. В настоящий момент я являюсь студентом 2 курса и я уже начинаю изучать языки программирования, такие как <span class="orange">Lua, Python, C# и тд</span>. В свободное время я обожаю сидеть за компьютером и играть в разнообразные <span class="orange">видеоигры</span>. Также увлекаюсь <span class="orange">Левел Дизайнер</span> и хочу двигаться в этом направлении дальше...
+                Меня зовут <span class="orange">Григорий</span> и я родился <span class="orange">13 Декабря 2004 года</span> в городе Бородино. Я интересуюсь <span class="orange">UX/UI дизайном</span> и <span class="orange">программирование</span>. В настоящий момент я являюсь студентом 2 курса и я уже начинаю изучать языки программирования, такие как <span class="orange">Lua, Python, C# и тд</span>. В свободное время я обожаю сидеть за компьютером и играть в разнообразные <span class="orange">видеоигры</span>. Также увлекаюсь <span class="orange">Левел Дизайнер</span> и хочу двигаться в этом направлении дальше.
             </div>
             <p><img src="images/avatar.png" alt="Error 1 (Invalid Image)" class="circle"></p>
             <p class="overhead-name">FULKA</p>
