--- a/index.html
+++ b/index.html
@@ -83,9 +83,5 @@
             </div>
         </div>  
     </body>
-    <script>
-        function Alert_Discord() {
-            alert("Fulka#0001");
-        }
-        </script>
+    <script src="script.js"></script>
 </html>
