--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <body>
         <div class="overhead">
             <div class="overhead-desc">
-                Меня зовут <span class="orange">Григорий</span> и я родился <span class="orange">13 Декабря 2004 года</span> в городе Бородино. Я интересуюсь <span class="orange">UX/UI дизайном</span> и <span class="orange">программирование</span>. В настоящий момент я являюсь студентом 2 курса и я уже начинаю изучать языки программирования, такие как <span class="orange">Lua, Python, C# и тд</span>. В свободное время я обожаю сидеть за компьютером и играть в разнообразные <span class="orange">видеоигры</span>. Также увлекаюсь <span class="orange">Левел Дизайнер</span> и хочу двигаться в этом направлении дальше...
+                Меня зовут <span class="orange">Григорий</span> и я родился <span class="orange">13 Декабря 2004 года</span> в городе Бородино. Я интересуюсь <span class="orange">UX/UI дизайном</span> и <span class="orange">программирование</span>. В настоящий момент я являюсь студентом 2 курса и я уже начинаю изучать языки программирования, такие как <span class="orange">Lua, Python, C# и тд</span>. В свободное время я обожаю сидеть за компьютером и играть в разнообразные <span class="orange">видеоигры</span>. Также увлекаюсь <span class="orange">Левел Дизайнер</span> и хочу двигаться в этом направлении дальше, создавая более проработаные и реалистичные <span class="orange">игровые уровни</span> и <span class="orange">локации</span>.
             </div>
-            <p><img src="images/avatar.png" alt="Error 1 (Invalid Image)" class="circle"></p>
+            <img src="images/avatar.png" alt="Error 1 (Invalid Image)" class="circle">
             <p class="overhead-name">FULKA</p>
             <hr>
             <div class="button-social">
@@ -45,7 +45,6 @@
             </div>
             <div class="object">
                 <div class="object-core">
-                    <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image">
                     <div class="object-core-cube">
                         <img src="images/lua.svg" alt="Error 1 (Invalid Image)" class="object-core-logo">
                     </div>
@@ -53,32 +52,58 @@
                         <a class="object-core-name">Lua</a>
                     </div>
                     <div class="object-core-text">
-                        Создавал собственные игровые дополнения для видеоигры <span class="orange">Garry's mod</span>. 
+                        Были разработаны игровые <span class="orange">дополнения</span> для расширение потенциала и возможностей в видеоигре <span class="orange">Garry's mod</span>, с использованием языка программирования <span class="orange">Lua</span>.
+                    </div>
+                    <div class="object-core-image">
+                        <div class="object-core-block">
+                            1
+                        </div>
+                        <div class="object-core-block">
+                            2
+                        </div>
+                        <div class="object-core-block">
+                            3
+                        </div>
+                        <div class="object-core-block">
+                            4
+                        </div>
                     </div>
                 </div>
                 <div class="object-core">
-                    <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image">
                     <div class="object-core-cube">
                         <img src="images/python.svg" alt="Error 1 (Invalid Image)" class="object-core-logo">
                     </div>                    
                     <div class="object-core-rectangle">
                         <a class="object-core-name">Python</a>
                     </div>
-                    <div class="object-core-text">
+                    <!-- <div class="object-core-text">
                         Разработал собственного <span class="orange">Bot</span>, для своего сообщества в <span class="orange">Discord</span>.
-                    </div>
+                    </div> -->
+                    <!-- <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image"> -->
                 </div>
                 <div class="object-core">
-                    <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image">
                     <div class="object-core-cube">
                         <img src="images/hammer_editor.svg" alt="Error 1 (Invalid Image)" class="object-core-logo">
                     </div>
                     <div class="object-core-rectangle">
                         <a class="object-core-name">Hammer Editor</a>
                     </div>
-                    <div class="object-core-text">
+                    <!-- <div class="object-core-text">
                         Создавал игровые локации для видеоигры <span class="orange">Garry's mod</span> по вселенной <span class="orange">SCP</span>.
+                    </div> -->
+                    <!-- <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image"> -->
+                </div>
+                <div class="object-core">
+                    <div class="object-core-cube">
+                        <img src="images/figma.svg" alt="Error 1 (Invalid Image)" class="object-core-logo">
                     </div>
+                    <div class="object-core-rectangle">
+                        <a class="object-core-name">Figma</a>
+                    </div>
+                    <!-- <div class="object-core-text">
+                        Создавал игровые локации для видеоигры <span class="orange">Garry's mod</span> по вселенной <span class="orange">SCP</span>.
+                    </div> -->
+                    <!-- <img src="images/level_design/image1.png" alt="Error 1 (Invalid Image)" class="object-core-image"> -->
                 </div>
             </div>
         </div>  
